<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/wel_come"
        android:textColor="@color/light_black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/sign_to_continue"
        android:textColor="@color/light_black"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:hint="Email Id"
        app:startIconDrawable="@drawable/ig_lock"
        app:boxStrokeColor="@color/dark_green"
        app:hintTextColor="@color/light_black"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_continue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/nunito_medium"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:hint="Password"
        app:boxStrokeColor="@color/dark_green"
        app:hintTextColor="@color/light_black"
        app:startIconDrawable="@drawable/ig_lock"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_email_id"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_medium"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/forgot_pswd"
        android:textColor="@color/light_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle_shap"
        android:backgroundTint="#2C6975"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/btn_txt_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pswd" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/rectangle_shape_line"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/signup_google"
        android:textAllCaps="false"
        android:textColor="@color/light_black"
        android:textSize="18sp"
        app:icon="@drawable/icons8_google"
        app:iconGravity="textStart"
        app:iconSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_another_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/account_signup"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />


</androidx.constraintlayout.widget.ConstraintLayout>