<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpScreen">

    <TextView
        android:id="@+id/tv_otp_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/nunito_bold"
        android:textSize="25sp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/light_black"/>

    <TextView
        android:id="@+id/tv_send_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:textSize="22dp"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/light_black"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_verify"/>

    <TextView
        android:id="@+id/tvEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailIdText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:textSize="22dp"
        android:fontFamily="@font/nunito_regular"
        android:textColor="@color/light_black"
        app:layout_constraintTop_toBottomOf="@+id/tv_send_otp"/>

<!--    <LinearLayout-->
<!--        android:id="@+id/linear_Otp"-->
<!--        android:layout_width="280dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:gravity="center"-->
<!--        android:layout_marginTop="30dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_send_otp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:orientation="horizontal">-->

<!--        <com.mukesh.OtpView-->
<!--            android:id="@+id/otp_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:inputType="number"-->
<!--            android:itemBackground="@drawable/rectangle_shape_line"-->
<!--            android:textColor="@android:color/white"-->
<!--            app:itemCount="4"-->
<!--            app:lineColor="@color/light_green"-->
<!--            app:viewType="none" />-->

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            style="@style/PinWidget.PinView"
            android:layout_marginTop="50dp"
            android:inputType="number"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/light_black"
            app:itemWidth="60dp"
            app:itemHeight="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_send_otp"
            android:itemBackground="@drawable/rectangle_shape_line"
            android:textSize="20sp"
            app:itemRadius="10dp"
            app:itemSpacing="15dp"
            app:lineColor="@color/dark_green"
            app:viewType="rectangle"/>

<!--        <EditText-->
<!--            android:id="@+id/et1"-->
<!--            android:layout_width="42dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="8dp"-->
<!--            android:background="@drawable/rectangle_shape_line"-->
<!--            android:gravity="center"-->
<!--            android:textIsSelectable="false"-->
<!--            android:maxLength="1"-->
<!--            android:maxLines="1"-->
<!--            android:imeOptions="actionNone"-->
<!--            android:inputType="number" />-->

<!--        <EditText-->
<!--            android:id="@+id/et2"-->
<!--            android:layout_width="42dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginHorizontal="8dp"-->
<!--            android:layout_weight="1"-->
<!--            android:maxLength="1"-->
<!--            android:maxLines="1"-->
<!--            android:background="@drawable/rectangle_shape_line"-->
<!--            android:imeOptions="actionNone"-->
<!--            android:textIsSelectable="false"-->
<!--            android:gravity="center"-->
<!--            android:inputType="number" />-->

<!--        <EditText-->
<!--            android:id="@+id/et3"-->
<!--            android:layout_width="42dp"-->
<!--            android:layout_height="46dp"-->
<!--            android:layout_marginHorizontal="8dp"-->
<!--            android:layout_weight="1"-->
<!--            android:maxLength="1"-->
<!--            android:maxLines="1"-->
<!--            android:imeOptions="actionNone"-->
<!--            android:background="@drawable/rectangle_shape_line"-->
<!--            android:gravity="center"-->
<!--            android:textIsSelectable="false"-->
<!--            android:inputType="number" />-->

<!--        <EditText-->
<!--            android:id="@+id/et4"-->
<!--            android:layout_width="42dp"-->
<!--            android:layout_height="46dp"-->
<!--            android:layout_marginHorizontal="8dp"-->
<!--            android:layout_weight="1"-->
<!--            android:maxLength="1"-->
<!--            android:maxLines="1"-->
<!--            android:imeOptions="actionNone"-->
<!--            android:textIsSelectable="false"-->
<!--            android:background="@drawable/rectangle_shape_line"-->
<!--            android:gravity="center"-->
<!--            android:inputType="number" />-->

<!--    </LinearLayout>-->
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_resend_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinView"
        android:gravity="center"
        android:textSize="18sp"
        android:clickable="false"
        android:textColor="@color/light_black"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/tv_resend_time"
        app:layout_constraintTop_toBottomOf="@+id/pinView"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/light_black"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_shap"
        android:backgroundTint="#2C6975"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/btn_txt_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resend_time" />


</androidx.constraintlayout.widget.ConstraintLayout>