<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_account"
            android:textColor="@color/light_black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signup_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/signup_started"
            android:textColor="@color/light_black"
            android:textSize="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ig_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_started" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/igEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ig_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_started" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/add_profile"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_profile">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="Full Name"
                android:layout_marginTop="29dp"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/light_black"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:maxLength="20"
                    android:singleLine="true"/>

<!--                <TextView-->
<!--                    android:id="@+id/txt_full_name"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:visibility="gone"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:text="please enter full name"-->
<!--                    android:textColor="@color/red" />-->


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_email_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="Email"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/light_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:maxLength="30"
                    android:singleLine="true" />

<!--                <TextView-->
<!--                    android:id="@+id/txt_email_id"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:visibility="gone"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:text="please enter email id"-->
<!--                    android:textColor="@color/red" />-->


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="Mobile No."
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:layout_marginTop="10dp"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/light_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_medium"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_select_gender"
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/select"
                android:layout_marginTop="10dp"
                app:endIconTint="@color/dark_green"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/light_black"
                app:layout_constraintTop_toBottomOf="@+id/tl_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                
                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:singleLine="true"
                    android:fontFamily="@font/nunito_medium"/>



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:hint="Password"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/dark_green"
                app:hintTextColor="@color/light_black"
                app:passwordToggleEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:passwordToggleTint="@color/dark_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tl_select_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_medium"
                    android:maxLength="10"
                    android:singleLine="true"/>

<!--                <TextView-->
<!--                    android:id="@+id/txt_enter_pswd"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:visibility="gone"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:text="please enter mobile no"-->
<!--                    android:textColor="@color/red" />-->


            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_shap"
            android:backgroundTint="#2C6975"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/btn_txt_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c_layout" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/blue"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>